2023-07-17T08:12:16Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5573280324 # 1014
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-17
* notice: last 14d: unq all: 39 5030
* notice: prev accum: outdated-unq outdated-all / unq all: 1501 139220 / 1578 144327
* notice: next accum: outdated-unq outdated-all / unq all: 1501 139220 / 1581 144438
* notice: prev exec diff / last date diff / accum: unq all: +3 +111 -0 -162 / +3 +111 -0 -0 / 3 111
* notice: removed / changed dates: [] / [2023-07-03 2023-07-17]

2023-07-17T00:56:19Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5570706144 # 1013
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-17
* notice: last 14d: unq all: 39 5081
* notice: prev accum: outdated-unq outdated-all / unq all: 1495 138826 / 1578 144234
* notice: next accum: outdated-unq outdated-all / unq all: 1501 139220 / 1578 144327
* notice: prev exec diff / last date diff / accum: unq all: +0 +93 -0 -26 / +2 +298 -0 -0 / 2 298
* notice: removed / changed dates: [2023-07-02] / [2023-07-03 2023-07-16]

2023-07-16T16:09:52Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5568610921 # 1012
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-16
* notice: last 14d: unq all: 39 5077
* notice: prev accum: outdated-unq outdated-all / unq all: 1495 138826 / 1578 144139
* notice: next accum: outdated-unq outdated-all / unq all: 1495 138826 / 1578 144234
* notice: prev exec diff / last date diff / accum: unq all: +0 +95 -4 -144 / +2 +205 -0 -0 / 2 205
* notice: removed / changed dates: [] / [2023-07-02 2023-07-16]

2023-07-16T08:10:13Z: