@@ -1,3 +1,12 @@
+2023-07-17T16:11:20Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5578009901 # 1015
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-17
+* notice: last 14d: unq all: 39 4997
+* notice: prev accum: outdated-unq outdated-all / unq all: 1501 139220 / 1581 144438
+* notice: next accum: outdated-unq outdated-all / unq all: 1501 139220 / 1581 144533
+* notice: prev exec diff / last date diff / accum: unq all: +0 +95 -2 -128 / +3 +206 -0 -0 / 3 206
+* notice: removed / changed dates: [] / [2023-07-03 2023-07-17]
+
 2023-07-17T08:12:16Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5573280324 # 1014
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-17
